# kansai-mansion-analytics

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.local.json
.streamlit/: config.toml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/: sources.yml
dbt_project/models/dimensions/: _dimensions.yml  dim_floor_plan.sql  dim_municipality.sql  dim_prefecture.sql  dim_structure.sql
dbt_project/models/facts/: _facts.yml  fct_transactions.sql
dbt_project/models/marts/: _marts.yml  mart_training_dataset.sql
dbt_project/models/staging/: _staging.yml  stg_transactions.sql
docs/: ARCHITECTURE.md
models/: latest.joblib
scripts/: enrich_station_distance.py  fetch_data.py  train_model.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  api_client.py  hazard_data.py  municipality_data.py  station_data.py
src/features/: __init__.py  feature_engineering.py
src/models/: __init__.py  predictor.py  trainer.py
tests/: conftest.py
tests/test_features/: __init__.py  test_feature_engineering.py
tests/test_models/: __init__.py  test_predictor.py
