[project]
name = "kansai-mansion-analytics"
version = "0.1.0"
description = "関西地方マンション価格予測AI"
requires-python = ">=3.10"
dependencies = [
    # Streamlit
    "streamlit>=1.31.0",
    "plotly>=5.18.0",

    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "duckdb>=0.10.0",

    # dbt
    "dbt-core>=1.7.0",
    "dbt-duckdb>=1.7.0",

    # Machine Learning
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",

    # API Client
    "httpx>=0.26.0",
    "tenacity>=8.2.0",

    # Geocoding
    "geopy>=2.4.1",

    # Configuration
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # Logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
